# udemy-pipeline

./: .gitignore  README.md  pyproject.toml  requirements-certificate.txt
iac/: cloudwatch.tf  data.tf  dynamodb.tf  ecr.tf  env.tftpl  lambda.tf  main.tf  orchestrator.tf  outputs.tf  providors.tf  role.tf  storage.tf  terraform.tfvars  variables.tf
iac/docker/: Dockerfile  Dockerfile.tesseract
iac/template/: env.tftpl  policy_eventbridge.tftpl  policy_sfsm.tftpl
src/etl_pipeline/: config.py  config.yaml  config_docker.py  lambda_function.py  pipeline.py
src/etl_pipeline/etl/: extract.py  load.py  transform.py
src/etl_pipeline/sql/: bronze.sql  gold.sql  silver.sql
src/fetch_api/: lambda_function.py  main.py
src/image_scraper/: image_scraper.py  lambda_function.py  main.py
src/web_scraper/: main.py
