[project]
name = "udemy-pipeline"
version = "0.1.0"
description = "Data pipeline for Udemy courses"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.35",
    "duckdb>=1.4.4",
    "pandas>=3.0.0",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.2.1",
    "requests>=2.32",
]
